[package]
name = "find-images"
version = "0.1.3"
edition = "2024"
description = "Find images"
authors = ["George H <georgeh124v2@gmail.com>"]
repository = "https://git.ascendforever.com/ascendforever/find-images"
license = "GPL-3.0-or-later"

[profile.release]
lto = true
codegen-units = 4
strip = "debuginfo"
overflow-checks = true

[dependencies]
chrono = "0.4"
shlex = "1.3"
clap = { version = "4.5", features = ["derive"] }
